--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "generates a base 64 url-safe token",
   "main": "index.js",
   "scripts": {
-    "test": "node --use_strict --harmony_destructuring --harmony_default_parameters test | tap-dot"
+    "test": "node --use_strict test"
   },
   "repository": {
     "type": "git",
